@@ -1,23 +1,23 @@
 package dk.dbc.dataio.harvester.types;
 
 import dk.dbc.marc.binding.MarcRecord;
+import dk.dbc.marc.reader.JsonReader;
 import dk.dbc.marc.reader.MarcReaderException;
-import dk.dbc.marc.reader.MarcXchangeV1Reader;
-import dk.dbc.marc.writer.MarcXchangeV1Writer;
+import dk.dbc.marc.writer.JsonWriter;
+import dk.dbc.marc.writer.MarcWriterException;
 
-import java.io.BufferedInputStream;
 import java.io.ByteArrayInputStream;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.List;
 
 /**
  * This class represents a MARC Exchange Collection as a harvester XML record.
  * <p>
  * This class is not thread safe.
  */
-public class MarcExchangeCollection implements HarvesterXmlRecord {
+public class MarcExchangeCollection implements HarvesterRecord {
     private final Charset charset = StandardCharsets.UTF_8;
     private final ArrayList<MarcRecord> records;
 
@@ -34,14 +34,22 @@ public class MarcExchangeCollection implements HarvesterXmlRecord {
         if (records.isEmpty()) {
             throw new HarvesterInvalidRecordException("Empty marcXchange collection");
         }
-        return new MarcXchangeV1Writer().writeCollection(records, charset);
+        try {
+            return new JsonWriter().writeCollection(records, charset);
+        } catch (MarcWriterException e) {
+            throw new HarvesterException(e);
+        }
     }
 
     /**
      * @return an empty collection, only containing the outer wrapper elements for the collection
      */
-    public byte[] emptyCollection() {
-        return new MarcXchangeV1Writer().writeCollection(Collections.emptyList(), charset);
+    public byte[] emptyCollection() throws HarvesterException {
+        try {
+            return new JsonWriter().writeCollection(List.of(), charset);
+        } catch (MarcWriterException e) {
+            throw new HarvesterException(e);
+        }
     }
 
     /**
@@ -66,15 +74,13 @@ public class MarcExchangeCollection implements HarvesterXmlRecord {
             throw new HarvesterInvalidRecordException("member data can not be null");
         }
         try {
-            final MarcXchangeV1Reader marcReader = new MarcXchangeV1Reader(
-                    new BufferedInputStream(
-                            new ByteArrayInputStream(memberData)), charset);
-            final MarcRecord record = marcReader.read();
+            JsonReader reader = new JsonReader(new ByteArrayInputStream(memberData));
+            final MarcRecord record = reader.read();
             if (record == null) {
                 throw new HarvesterInvalidRecordException("No marcXchange record found");
             }
             records.add(record);
-            if (marcReader.read() != null) {
+            if (reader.read() != null) {
                 throw new HarvesterInvalidRecordException("Given collection contains more than one record");
             }
         } catch (MarcReaderException e) {
